--- a/categories.html
+++ b/categories.html
@@ -106,144 +106,144 @@
     <section class="categories py-2">
       <div class="container">
         <div class="row pt-3">
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Mobile & Tablets </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (1).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Vehicles </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (2).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Properties </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (3).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Jobs </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (4).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Kids & Babies </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (5).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Hoppies </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (6).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Pets </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (7).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Furniture & Decor </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (8).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Fashion & Beauty </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (9).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Electronics & Appliances </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (10).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Businesses & Industrial </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (11).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Services </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (12).svg" alt="">
