--- a/index.html
+++ b/index.html
@@ -102,21 +102,18 @@
       <button class="btn"> <img src="img/icons/search.svg" alt=""> </button>
     </form>
     <!-- video Slider -->
-    <section class="swiper mainSlider ">
+    <!-- <section class="swiper mainSlider ">
       <div class="swiper-wrapper">
-        <!-- swiper-slide -->
         <div class="swiper-slide">
           <a href="#!" class="viewContainer">
             <img src="img/sliderImg2.jpg" alt="">
           </a>
         </div>
-        <!-- swiper-slide -->
         <div class="swiper-slide">
           <a href="#!" class="viewContainer">
             <img src="img/sliderImg1.jpg" alt="">
           </a>
         </div>
-        <!-- swiper-slide -->
         <div class="swiper-slide">
           <a href="#!" class="viewContainer">
             <img src="img/sliderImg3.jpg" alt="">
@@ -124,15 +121,10 @@
         </div>
       </div>
       </div>
-      <!-- swiper Control -->
       <div class="swiperControl" data-aos="fade-up">
         <div class="swiper-pagination"></div>
-        <!-- <div class="swiperBtns">
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div> -->
       </div>
-    </section>
+    </section> -->
     <!-- categories -->
     <section class="categories">
       <div class="container">
@@ -144,96 +136,96 @@
           <a href="categories.html" class="viewAll"> View all <img src="img/icons/arrow.svg" alt=""> </a>
         </div>
         <div class="row pt-3">
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Mobile & Tablets </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (1).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Vehicles </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (2).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Properties </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (3).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Jobs </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (4).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Kids & Babies </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (5).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Hoppies </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (6).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Pets </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (7).svg" alt="">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
+          <div class="col-6 col-md-4 col-xl-3 p-2" data-aos="fade-up">
             <!-- category -->
             <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Furniture & Decor </h5>
-                <span>15,000 ads</span>
+                <!-- <span>15,000 ads</span> -->
               </div>
               <div class="icon">
                 <img src="img/categories/icon (8).svg" alt="">
