--- a/addPost.html
+++ b/addPost.html
@@ -567,7 +567,7 @@
                                     blazing‑fast performance.
                                 </p>
                                 <div class="instructions">
-                                    <span> Used (normal wear) </span>
+                                    <span> Used </span>
                                     <span> Shipping </span>
                                     <span> Firm price </span>
                                 </div>
