--- a/itemDetails.html
+++ b/itemDetails.html
@@ -238,7 +238,7 @@
                 blazing‑fast performance.
               </p>
               <div class="instructions">
-                <span> Used (normal wear) </span>
+                <span> Used </span>
                 <span> Shipping </span>
                 <span> Firm price </span>
               </div>
