--- a/favorite.html
+++ b/favorite.html
@@ -29,10 +29,10 @@
         <img src="img/logo.svg" loading="lazy" alt="">
       </a>
       <!-- search form -->
-      <form class="searchForm">
+      <!-- <form class="searchForm">
         <input type="search" class="form-control" placeholder="Search ">
         <button class="btn"> <img src="img/icons/search.svg" alt=""> </button>
-      </form>
+      </form> -->
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler">
