--- a/listing.html
+++ b/listing.html
@@ -29,10 +29,10 @@
         <img src="img/logo.svg" loading="lazy" alt="">
       </a>
       <!-- search form -->
-      <form class="searchForm">
+      <!-- <form class="searchForm">
         <input type="search" class="form-control" placeholder="Search ">
         <button class="btn"> <img src="img/icons/search.svg" alt=""> </button>
-      </form>
+      </form> -->
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler">
@@ -108,10 +108,47 @@
         <div class="row m-0">
           <div class="col-lg-3 col-md-4 p-2">
             <!-- search form -->
-            <form class="searchForm d-flex w-100 ">
-              <input type="search" class="form-control" placeholder="Search ">
-              <button class="btn"> <img src="img/icons/search.svg" alt=""> </button>
-            </form>
+            <div class="loactionSearch my-2 w-100">
+              <div class="locationText">
+                <div class="icon">
+                  <img src="img/icons/location.svg" alt="">
+                </div>
+                <div class="text">
+                  <p class="title"> currunt location </p>
+                  <h4 class="subtitle">cairo</h4>
+                </div>
+                <button class="btn" data-bs-target="#map" data-bs-toggle="modal"> change </button>
+              </div>
+              <!-- search form -->
+              <form class="searchForm">
+                <input type="search" class="form-control" placeholder="Search ">
+                <button class="btn"> <img src="img/icons/search.svg" alt=""> </button>
+              </form>
+              <!-- Modal -->
+              <div class="modal fade" id="map" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header mb-2">
+                      <h5 class="modal-title fw-bold" id="modalTitleId">
+                        Change Location
+                      </h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form action="" class="d-flex flex-column gap-2">
+                      <input type="text" class="form-control" id="location" placeholder="Enter location">
+                      <div class="map">
+                        <iframe
+                          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.0951325373107!2d-122.07612680914868!3d37.41122626103693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb7b642cd3ee1%3A0xafe1c337a4282db!2sCW6H%2BFF%2C%201600%20Amphitheatre%20Parkway%2C%20Mountain%20View%2C%20CA%2094043%2C%20USA!5e0!3m2!1sen!2seg!4v1716722690693!5m2!1sen!2seg"
+                          width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                          referrerpolicy="no-referrer-when-downgrade"></iframe>
+                      </div>
+                      <button class="btn  changeBTn" type="submit"> change </button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
             <!-- filter -->
             <div class="filter" id="filter">
               <button class="closeFilter" id="closefilter">
